[package]
name = "txt2csv"
version = "0.1.0"
edition = "2021"
authors = ["Olena Pasternak <oopasternak@gmail.com>"]
description = "txt2csv: A simple parser that converts semi-structured .txt files into clean .csv format using pest."
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
pest = "2"
pest_derive = "2"
thiserror = "2.0.17"
